--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cesar Atachao | Desarrollador Web</title>
 
+    <link rel="shortcut icon" href="images/c-logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/81478abc59.js"
