--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             </ul>
           </div>
           
-          <p class="footer-text">🎯 Made with love by <a href=""><i class="fa-brands fa-github"></i> SrChezz</a></p>
+          <p class="footer-text">🎯 Made with love by <a href="https://github.com/SrChezz" target="_blank"><i class="fa-brands fa-github"></i> SrChezz</a></p>
         </footer>
       </div>
     </main>
