--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
               <img src="images/project-01.png" alt="">
               <h3>Restaurante QuinuaQ</h3>
               <p>QuinuaQ es un restaurante con vistas hermosas y formación profesional en hostelería para jóvenes locales, en colaboración con Mama Alice</p>
-              <a href="https://github.com/SrChezz/demo-restaurant" target="_blank"><i class="fa-solid fa-laptop-code"></i> Demo</a>
-              <a href="https://srchezz.github.io/demo-restaurant/" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+              <a href="https://srchezz.github.io/demo-restaurant/" target="_blank"><i class="fa-solid fa-laptop-code"></i> Demo</a>
+              <a href="https://github.com/SrChezz/demo-restaurant" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
             </div>
           
 
@@ -118,8 +118,8 @@
               <img src="images/project-02.png" alt="">
               <h3>Plaza del Campo</h3>
               <p>Plaza del Campo tiene como misión llevar productos de alta calidad a todos los hogares. Nuestra alimentación enriquece cada hogar con alimentos frescos directamente desde la sabana.</p>
-              <a href="https://github.com/SrChezz/Market-Website" target="_blank"><i class="fa-solid fa-laptop-code"></i> Demo</a>
-              <a href="https://srchezz.github.io/Market-Website" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+              <a href="https://srchezz.github.io/Market-Website" target="_blank"><i class="fa-solid fa-laptop-code"></i> Demo</a>
+              <a href="https://github.com/SrChezz/Market-Website" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
             </div>
 
 
@@ -128,8 +128,8 @@
               <img src="images/project-03.png" alt="">
               <h3>Estudio C2O</h3>
               <p>C2O es un estudio especializado en la creación de contenido audiovisual de alta calidad para marcas que buscan destacarse en un mercado cada vez más competitivo. </p>
-              <a href="https://github.com/SrChezz/C2O-Galeria" target="_blank"><i class="fa-solid fa-laptop-code"></i> Demo</a>
-              <a href="https://srchezz.github.io/C2O-Galeria" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+              <a href="https://srchezz.github.io/C2O-Galeria" target="_blank"><i class="fa-solid fa-laptop-code"></i> Demo</a>
+              <a href="https://github.com/SrChezz/C2O-Galeria" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
             </div>
           </div>
         </section>
