--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 
     <link rel="shortcut icon" href="images/c-logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/81478abc59.js"
-      crossorigin="anonymous defer"
-    ></script>
+   <script src="https://kit.fontawesome.com/81478abc59.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
   </head>
   <body>
