--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
               <div class="container right">
                 <div>
-                  <h3>2024/02 - 2024/04</h3>
+                  <h3>2023/12 - 2024/04</h3>
                   <span class="small-title"><i class="fa-brands fa-google"></i> Google</span>
                   <p>IT Support Professional Certificate</p>
                 </div>
@@ -206,7 +206,7 @@
             
             <div>
               <span class="logo-skill"><i class="fa-brands fa-chrome"></i></span>
-              <span class="small-title">Notion</span>
+              <span class="small-title">Chrome</span>
             </div>
 
             <div>
