--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       gtag('config', 'G-JZYQZ37VYF');
     </script>
     <script src="https://kit.fontawesome.com/81478abc59.js" crossorigin="anonymous"></script>
-    
+
     <script src="script.js" defer></script>
   </head>
   <body>
@@ -47,7 +47,7 @@
         <div class="links">
           <a href="https://www.linkedin.com/in/cesaratachao/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
           <a href="https://github.com/SrChezz" target="_blank"><i class="fa-brands fa-github"></i> Github</a>
-          <a href="files/CV - Cesar Atachao.pdf" target="_blank"><i class="fa-regular fa-file"></i> Curriculum</a>
+          <a id="CV" href="files/CV - Cesar Atachao.pdf" target="_blank"><i class="fa-regular fa-file"></i> Curriculum</a>
         </div>
   
         <div class="presentation">
