--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="links">
           <a href="https://www.linkedin.com/in/cesaratachao/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
           <a href="https://github.com/SrChezz" target="_blank"><i class="fa-brands fa-github"></i> Github</a>
-          <a id="CV" href="/files/CV - Cesar Atachao.pdf" target="_blank"><i class="fa-regular fa-file"></i> Curriculum</a>
+          <a id="CV" href="files/CV - Cesar Atachao.pdf" target="_blank"><i class="fa-regular fa-file"></i> Curriculum</a>
         </div>
   
         <div class="presentation">
