--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <span><span class="dot"></span> Online</span>
         <h1>
           Hola, mi nombre es Cesar <br />
-          <span class="gradient-text">Desarrollador Web</span>
+          <span class="gradient-text">Cloud & Data Enthusiast ☁️</span>
         </h1>
         <div class="links">
           <a href="https://www.linkedin.com/in/cesaratachao/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
